--- a/static/css/password_reset_done.css
+++ b/static/css/password_reset_done.css
@@ -1,43 +1,41 @@
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
 
-body{
-    background-color: #FFFEF6; /* Color de fondo suave */
+body {
+    background-color: #FFFEF6; 
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     height: 100vh;
 }
 
-.container{
-    background-color: #FFFFFF; /* Fondo blanco */
+.container {
+    background-color: #FFFFFF; 
     border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15); /* Sombra suave */
-    position: relative;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
     width: 768px;
     max-width: 100%;
-    min-height: 520px; /* Incrementado para más contenido */
-    
-    /* Flexbox para centrar el contenido */
+    min-height: 520px; 
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centra horizontalmente */
-    justify-content: center; /* Centra verticalmente */
-    text-align: center; /* Centra el texto dentro de los elementos */
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
 }
 
-.container h2{
+.container h2 {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
 }
 
-.container p{
+.container p {
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.3px;
