--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,16 +1,30 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recuperar contraseña</title>
+    <title>Recuperar Contraseña</title>
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/password_reset_done.css' %}">
 </head>
 <body>
-    <main class="container">
-        <h2>Restablecimiento de contraseña solicitado</h2>
-        <p>Hemos enviado un enlace para restablecer la contraseña a su correo electrónico.</p>
-    </main>
+
+    <div class="container">
+        <i class="bi bi-envelope-check text-success display-3"></i>
+        <h2 class="mt-3">Correo Enviado</h2>
+        <p class="lead">Hemos enviado un enlace para restablecer la contraseña a tu correo electrónico.</p>
+        
+        <div class="alert alert-info mt-4">
+            <i class="bi bi-info-circle"></i> Por seguridad, esta pestaña no se puede cerrar automáticamente, 
+            por favor cierra manualmente esta pestaña desde tu navegador.
+        </div>
+    </div>
+
+    
+
 </body>
 </html>
